Header: mobile menu layout issue
z-index increased,
padding right removed

--- a/src/components/blocks/menu/_menu.scss
+++ b/src/components/blocks/menu/_menu.scss
@@ -17,6 +17,7 @@
         transition: transform .3s ease-in-out;
         text-align: center;
         box-sizing: border-box;
+        z-index: 1;
     }
 
     &_right {
@@ -37,6 +38,10 @@
 
         &:not(:last-child) {
             padding-right: 20px;
+
+            @include respond-to(not-desktop) {
+                padding-right: 0;    
+            }
         }
 
         @include respond-to(not-desktop) {
